test/modules/errors/init.js
const deps = [ 'c' ];

function init( c ) {
  return {
    name: 'b',
    x: no_such_function()
  };
}

module.exports = { deps, init };
